--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,8 @@
-AuthName "Main"
 AuthUserFile "/home/crunchie/.htpasswds/public_html/passwd"
-AuthType Basic
-require valid-user
+
+DirectorySlash Off
+
+IndexOptions FancyIndexing
+Options All
+RewriteEngine on
+
